--- a/brownie-fund-me/brownie-config.yaml
+++ b/brownie-fund-me/brownie-config.yaml
@@ -10,5 +10,11 @@ compiler:
       - "@chainlink=smartcontractkit/chainlink-brownie-contracts@1.1.1"
 
 dotenv: .env
+networks:
+  rinkeby:
+    eth-usd-price-feed-address: "0x8A753747A1Fa494EC906cE90E9f37563A8AF630e"
+    verify: True
+  developement:
+    verify: False
 wallets:
   from_key: ${PRIVATE_KEY}
