--- a/brownie-fund-me/brownie-config.yaml
+++ b/brownie-fund-me/brownie-config.yaml
@@ -14,6 +14,8 @@ networks:
   rinkeby:
     eth-usd-price-feed-address: "0x8A753747A1Fa494EC906cE90E9f37563A8AF630e"
     verify: True
+  ganache-ui:
+    verify: False
   developement:
     verify: False
 wallets:
