feat(brownie/FundMe contract): test skipping example

--- a/brownie-fund-me/brownie-config.yaml
+++ b/brownie-fund-me/brownie-config.yaml
@@ -11,6 +11,7 @@ compiler:
 
 dotenv: .env
 networks:
+  default: development # default value used to define the network if nothing explicit in the brownie command line
   rinkeby:
     eth-usd-price-feed-address: "0x8A753747A1Fa494EC906cE90E9f37563A8AF630e"
     verify: True
