test(lottery): test the getEntranceFee contract function

--- a/brownie-lottery/brownie-config.yaml
+++ b/brownie-lottery/brownie-config.yaml
@@ -25,3 +25,4 @@ networks:
     eth-usd-price-feed: "0x5f4eC3Df9cbd43714FE2740f5E3616155c5b8419"
 wallets:
   from_key: ${PRIVATE_KEY}
+dotenv: .env
